Fixed typo in client_id value

--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -43,7 +43,7 @@
         "profile"
       ]
       FHIR.oauth2.authorize({
-        'client_id': '279e439e-f44b-4c6f-aee5-bdc0a67013d1U',
+        'client_id': '279e439e-f44b-4c6f-aee5-bdc0a67013d1',
         'scope':  scopes.join(' ')
       });
     </script>
